--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero-content">
                 <div class="stat-badge">
                     <span class="stat-number">22.7%</span>
-                    <span class="stat-text">Employment Rate (2024)</span>
+                    <span class="stat-text">Special Needs Employment Rate (2024)</span>
                 </div>
                 <h1 class="hero-title">Empowering Inclusive Career Development</h1>
                 <p class="hero-subtitle">
@@ -259,7 +259,7 @@
                 <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </div>
-            <p class="footer-copyright">© 2024 Project 227 — All Rights Reserved</p>
+            <p class="footer-copyright">© 2026 Project 227 — All Rights Reserved</p>
         </div>
     </footer>
 
