--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 227 – Inclusive Career Development</title>
-    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"-->
-    <!--link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet"-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"-->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet"-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -38,11 +38,7 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="placeholder-image">
-                    <i class="fas fa-image placeholder-icon"></i>
-                    <span class="placeholder-text">HERO IMAGE</span>
-                    <small style="color: #64748b; z-index: 1;">Conference or team photo</small>
-                </div>
+                <img src="hero-image.jpg" alt="Project 227 Conference" style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
             </div>
         </div>
     </section>
