--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
             </div>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-value">227</div>
+                    <div class="stat-value">105</div>
                     <div class="stat-label">Community Members RSVP'd</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value">98%</div>
+                    <div class="stat-value">95%</div>
                     <div class="stat-label">Increased Confidence in ABLE Accounts</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value">1B+</div>
+                    <div class="stat-value">1K+</div>
                     <div class="stat-label">Website Visits & Video Views</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value">50+</div>
+                    <div class="stat-value">10+</div>
                     <div class="stat-label">Families Scheduled Follow-up Meetings</div>
                 </div>
             </div>
@@ -158,17 +158,50 @@
 
             <h3 class="team-title" style="margin-top: 4rem;">Participating Businesses & Organizations</h3>
             <div class="businesses-grid">
-                <div class="business-card"><h4>Gifted Hands Tutoring</h4></div>
-                <div class="business-card"><h4>Project SEARCH</h4><p>Community North Hospital</p></div>
-                <div class="business-card"><h4>The Brain Center</h4></div>
-                <div class="business-card"><h4>New Hope of Indiana</h4></div>
-                <div class="business-card"><h4>Guardian Care</h4></div>
-                <div class="business-card"><h4>Indiana Family to Family</h4></div>
-                <div class="business-card"><h4>Uniquely You</h4></div>
-                <div class="business-card"><h4>Noble, Inc.</h4></div>
-                <div class="business-card"><h4>Carmel Clay Parks & Recreation</h4></div>
-                <div class="business-card"><h4>WestPoint Financial</h4></div>
-                <div class="business-card"><h4>Fields Market Garden</h4></div>
+                <div class="business-card">
+                    <h4>Gifted Hands Tutoring</h4>
+                    <p>Specialized academic support and 1-on-1 instruction.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Project SEARCH</h4>
+                    <p>Work-based learning at Community Hospital North.</p>
+                </div>
+                <div class="business-card">
+                    <h4>The Brain Center</h4>
+                    <p>Neuropsychological services and cognitive rehabilitation.</p>
+                </div>
+                <div class="business-card">
+                    <h4>New Hope of Indiana</h4>
+                    <p>Comprehensive services for individuals with disabilities.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Guardian Care</h4>
+                    <p>Personal care, nursing, and home-based support services.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Indiana Family to Family</h4>
+                    <p>Information and training for families of children with extra needs.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Uniquely You</h4>
+                    <p>Social skills development and community integration programs.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Noble, Inc.</h4>
+                    <p>Career transition and disability expansion services.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Carmel Clay Parks & Recreation</h4>
+                    <p>Inclusive adaptive programs and community activities.</p>
+                </div>
+                <div class="business-card">
+                    <h4>WestPoint Financial</h4>
+                    <p>Special Care planning and financial security advice.</p>
+                </div>
+                <div class="business-card">
+                    <h4>Fields Market Garden</h4>
+                    <p>Sustainable farming and vocational training opportunities.</p>
+                </div>
             </div>
         </div>
     </section>
