--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
             <h3 class="team-title">Keynote Speakers</h3>
             <div class="speakers-grid">
 
-                <!-- TED BROWN -->
                 <div class="speaker-card">
                     <div class="speaker-header">
                         <div class="speaker-photo">
@@ -132,14 +131,18 @@
                         </div>
                     </div>
                     <p class="speaker-bio">Ted Brown is a retired Vice President of Toyota Motor Manufacturing Indiana who traveled from Evansville to participate. During his career, Brown advocated for inclusive hiring and workplace accessibility. As the parent of an adult child with an intellectual disability, he effectively connected his personal experiences with his professional background.</p>
-                    <div class="video-placeholder">
-                        <i class="fas fa-play-circle"></i>
-                        <p>VIDEO PLACEHOLDER - Ted Brown's Keynote</p>
-                        <small style="color:#64748b;">Embed YouTube/Vimeo video here</small>
+                    
+                    <div style="margin-top:1.5rem; position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:13px; box-shadow:0 8px 24px rgba(0,0,0,0.12);">
+                        <iframe 
+                            style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
+                            src="https://www.youtube-nocookie.com/embed/hmtdvMHkuaw" 
+                            title="Ted Brown Keynote Speech" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
 
-                <!-- GORDON HOMES -->
                 <div class="speaker-card">
                     <div class="speaker-header">
                         <div class="speaker-photo">
@@ -152,7 +155,6 @@
                     </div>
                     <p class="speaker-bio">Gordon Homes is a Financial Advisor who focuses on helping families achieve long-term financial security. As a Special Care Planner and parent of a child with intellectual disabilities, he specializes in lifelong care planning, including public benefits navigation, Special Needs Trusts, ABLE accounts, and guardianship considerations.</p>
 
-                    <!-- SLIDESHOW -->
                     <div style="margin-top:1.5rem;">
                         <div style="position:relative;background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 8px 24px rgba(0,0,0,0.12);aspect-ratio:1270/952;">
                             <div id="gordonSlideContainer" style="width:100%;height:100%;position:relative;"></div>
@@ -176,7 +178,7 @@
             <h3 class="team-title" style="margin-top:4rem;">Participating Businesses & Organizations</h3>
             <div class="businesses-grid">
 
-                <a href="https://www.giftedhandstutoring.com" target="_blank" rel="noopener noreferrer" class="business-card" style="text-decoration:none;color:inherit;display:block;">
+                <a href="https://www.facebook.com/p/Gifted-Hands-Tutoring-100065072977703/" target="_blank" rel="noopener noreferrer" class="business-card" style="text-decoration:none;color:inherit;display:block;">
                     <h4>Gifted Hands Tutoring</h4>
                     <p>Specialized academic support and 1-on-1 instruction.</p>
                 </a>
@@ -317,6 +319,8 @@
             <p class="footer-copyright">© 2026 Project 227 — All Rights Reserved</p>
         </div>
     </footer>
+</body>
+</html>
 
     <!-- GORDON HOMES SLIDESHOW SCRIPT -->
     <script>
