Video size fixes

--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
                     <p class="speaker-bio">Gordon Homes is a Financial Advisor who focuses on helping families achieve long-term financial security. As a Special Care Planner and parent of a child with intellectual disabilities, he specializes in lifelong care planning, including public benefits navigation, Special Needs Trusts, ABLE accounts, and guardianship considerations.</p>
 
                     <div style="margin-top:1.5rem;">
-                        <div style="position:relative;background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 8px 24px rgba(0,0,0,0.12);aspect-ratio:1270/952;">
-                            <div id="gordonSlideContainer" style="width:100%;height:100%;position:relative;"></div>
+                        <div style="position:relative; background:#fff; border-radius:10px; overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,0.12);">
+                        <div id="gordonSlideContainer" style="width:100%; position:relative;"></div>
+                    </div>
                         </div>
                         <div style="display:flex;align-items:center;justify-content:space-between;margin-top:12px;gap:10px;">
                             <button onclick="gordonSlide(-1)" id="gordonPrev" style="background:#1e3a5f;color:#fff;border:none;border-radius:8px;padding:9px 20px;font-size:14px;cursor:pointer;font-family:inherit;">&#8592; Prev</button>
