--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </div>
                     <p class="speaker-bio">Ted Brown is a retired Vice President of Toyota Motor Manufacturing Indiana who traveled from Evansville to participate. During his career, Brown advocated for inclusive hiring and workplace accessibility. As the parent of an adult child with an intellectual disability, he effectively connected his personal experiences with his professional background.</p>
                     
-                    <div style="margin-top:1.5rem; position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:13px; box-shadow:0 8px 24px rgba(0,0,0,0.12);">
+                    <div class="video-wrapper" style="margin-top:1.5rem; position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:13px; box-shadow:0 8px 24px rgba(0,0,0,0.12);">
                         <iframe 
                             style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
                             src="https://www.youtube-nocookie.com/embed/hmtdvMHkuaw" 
